# RawInflate

./: .gitignore  README.md  build.bat
Native/: CMakeLists.txt  build.bat
Native/RawInflate/: CMakeLists.txt  RawInflate.cpp  RawInflate.h
Native/zip_test/: CMakeLists.txt  main.cpp
UnityProject/Assets/RawInflate/Plugins/: RawInflateImport.cs
UnityProject/ProjectSettings/: ProjectSettings.asset
zip_test/: CMakeLists.txt  main.cpp
