SET(PROJECT_NAME RawInflate)
FILE(GLOB SRC
    *.cpp 
    *.h
    )
ADD_LIBRARY(${PROJECT_NAME} SHARED
    ${SRC}
    )
TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC
    NOMINMAX
    RAWINFLATE_BUILD
    )
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/../zlib-1.2.11
    ${CMAKE_CURRENT_BINARY_DIR}/../zlib-1.2.11
    )
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    zlibstatic
    )

IF(CMAKE_SIZEOF_VOID_P MATCHES "8")
    # 64-bit build on win64
    SET(DST ${CMAKE_CURRENT_LIST_DIR}/../../UnityProject/Assets/${PROJECT_NAME}/Plugins/x86_64/)
ELSE()
    SET(DST ${CMAKE_CURRENT_LIST_DIR}/../../UnityProject/Assets/${PROJECT_NAME}/Plugins/x86/)
ENDIF()
INSTALL(TARGETS ${PROJECT_NAME} 
    COMPONENT RUNTIME
    DESTINATION ${DST}
    )
INSTALL(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/${PROJECT_NAME}.pdb 
    DESTINATION ${DST}
    CONFIGURATIONS DEBUG
    )

