SET(PROJECT_NAME zip_test)
FILE(GLOB SRC
    *.cpp 
    *.h
    )
ADD_EXECUTABLE(${PROJECT_NAME}
    ${SRC}
    )
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/../zlib-1.2.11
    ${CMAKE_CURRENT_BINARY_DIR}/../zlib-1.2.11
    )
TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC
    NOMINMAX
    )
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    RawInflate
    )

